# dav

./: .gitignore  AI-ONBOARDING.md  CONTRIBUTING.md  DAV-AI-PROMPT.md  LICENSE  README.md  ansible.cfg
adr/: 001-dav-consumer-agnostic-framework.md  002-dcm-integration-model.md  README.md
ansible/: ansible.cfg  playbook.yaml
ansible/inventory/: hosts.yaml
docs/: README.md  dav-roadmap.md  operator-runbook.md
engine/: Containerfile  README.md  pyproject.toml  requirements.txt
engine/src/dav/ai/: agent.py  client.py  mcp_tools.py  prompts.py
engine/src/dav/core/: __init__.py  consumer_profile.py  corpus.py  ensemble.py  explore.py  use_case_schema.py  version.py
engine/src/dav/evaluator/: compare.py
engine/src/dav/scripts/: compare_analyses.py  smoke_test_stage2.py
engine/src/dav/stages/: __init__.py  run_corpus.py  stage2_analyze.py
engine/src/dav/tests/: test_consumer_profile.py  test_ensemble.py  test_explore.py  test_run_corpus.py  test_schema_v1.py  test_stage2_orchestration.py  test_version.py
examples/: README.md  dcm-reference-profile.yaml
examples/exemplar-ucs/: exemplar-bookcatalog-policy-violation.yaml  exemplar-bookcatalog-register-happy-path.yaml
mcp/dav-docs-mcp/: Containerfile  (+2 more)
review-console/: AI-PROMPT.md  README.md
scripts/: verify-image-provenance.sh
specs/: 01-framework-overview.md  02-stage-model.md  03-determinism-invariants.md  04-three-modes.md  05-use-case-schema.md  06-prompt-contract.md  07-analysis-output-schema.md  08-consumer-integration.md  09-deployment-standards.md  10-calibration-and-correctness.md  README.md
(+78 files in other folders)
